--- a/mandelbulber2/formula/ui/transf_difs_prism.ui
+++ b/mandelbulber2/formula/ui/transf_difs_prism.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_difs_prism</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -147,7 +147,7 @@
       </widget>
      </item>
      <item row="5" column="2">
-      <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_05">
+      <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_1">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -177,7 +177,7 @@
      <item row="5" column="0">
       <widget class="QLabel" name="label_109">
        <property name="text">
-        <string>height:</string>
+        <string>length:</string>
        </property>
       </widget>
      </item>
@@ -189,7 +189,7 @@
       </widget>
      </item>
      <item row="4" column="2">
-      <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetT_1">
+      <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_05">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
