transf_difs_hextgrid2  fix DE (flat height = 0.1)

--- a/mandelbulber2/formula/ui/difs_hextgrid2.ui
+++ b/mandelbulber2/formula/ui/difs_hextgrid2.ui
@@ -32,7 +32,7 @@
    <item>
     <widget class="MyGroupBox" name="groupCheck_transf_sphere_inversion_enabled_false">
      <property name="title">
-      <string>Sphere Invers&amp;ion (start hex at iteration 1)</string>
+      <string>Sphere Invers&amp;ion</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
