--- a/mandelbulber2/formula/ui/transf_difs_box_v3.ui
+++ b/mandelbulber2/formula/ui/transf_difs_box_v3.ui
@@ -834,6 +834,16 @@
        </property>
       </widget>
      </item>
+     <item row="1" column="0">
+      <widget class="QFrame" name="frame">
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
