--- a/mandelbulber2/formula/ui/difs_torus.ui
+++ b/mandelbulber2/formula/ui/difs_torus.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>difs_torus</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -1127,13 +1127,6 @@
            <property name="spacing">
             <number>2</number>
            </property>
-           <item row="3" column="0" colspan="2">
-            <widget class="MyCheckBox" name="checkBox_transf_function_enabledCz_false">
-             <property name="text">
-              <string>enable var&amp;y scale mode B</string>
-             </property>
-            </widget>
-           </item>
            <item row="1" column="1">
             <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_vary_0">
              <property name="sizePolicy">
